# AMiRo_Fly

./: Blockdiagramm.vsdx  FlightController.xlsx  README.md  cleanflight.hex
Doku_pjuenemann/: 1_einleitung.aux  1_einleitung.tex  2_kap1.tex  3_kap2.tex  4_kap3.tex  6_Zusammenfassung.tex  7_ausblick.tex  Hauptdatei.aux  Hauptdatei.bib  Hauptdatei.blg  Hauptdatei.lol  Hauptdatei.nls  Hauptdatei.out  Hauptdatei.tex  Hauptdatei.toc  abstract.aux  abstract.tex  abstract.texshop  beispiel.tex  erklaerung.aux  sperrvermerk.tex
Doku_pjuenemann/anhang/: anhang.tex  anhang.texshop
Doku_pjuenemann/latex_einstellungen/: deckblatt.aux  deckblatt.tex  variablen.tex
Doku_pjuenemann/latex_einstellungen/abkuezungen/: abkuerzungen.texshop
Kalmanfilter/: Evaluation_EKF_Anstieg+Konstant_auf_zAchse.fig  Evaluation_EKF_sinus_auf_zAchse.fig  SFB__kalmanfilter__SFB.mat  TestS.m  Test_Simin.slx  kalmanfilter.c  kalmanfilter.m  kalmanfilter.prj  kalmanfilter.tlc  kalmanfilter_mex.mexw64  kalmanfilter_wrapper.c
Kalmanfilter/MatLab2017a/: Controller.slx  ControllerForOriginSensordata.slx  ControllerForOriginSensordata.slx.autosave  ControllerForOriginSensordata_sfun.mexw64  ControllerNL.slx  ControllerNL.slx.autosave  ControllerNL.slx.original  ControllerNL_sfun.mexw64  ExtendedKalmanFilter0_sfun.mexw64  PoseEstimationController.slx  PoseEstimationController.slx.autosave  PoseEstimationController.slx.original  PoseEstimationController_sfun.mexw64  evalOriginSensordata.asv  evalOriginSensordata.m  importFCsensorData.m  quatern2euler.m  quaternProd.m  startControllerNL.asv  startControllerNL.m
Kalmanfilter/MatLab2017a/ControllerNL_grt_rtw/: build_exception.mat
Kalmanfilter/MatLab2017a/ExtendedKalmanFilter0_grt_rtw/: ExtendedKalmanFilter0.bat  ExtendedKalmanFilter0.c  ExtendedKalmanFilter0.h  ExtendedKalmanFilter0.mk  ExtendedKalmanFilter0_data.c  ExtendedKalmanFilter0_private.h  ExtendedKalmanFilter0_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  rtmodel.h  rtw_proj.tmw
Kalmanfilter/MatLab2017a/JsonFiles/: convertJson2txt.py  test.txt  x-richtung_kippen_merged.json  x-richtung_kippen_merged.txt  x-richtung_merged.json  x-richtung_merged.txt  x-richtung_merged_0206.json  y-richtung_kippen_merged.json  y-richtung_kippen_merged.txt  y-richtung_merged.json  y-richtung_merged.txt  y-richtung_merged_0206.json  z-richtung_merged.json  z-richtung_merged.txt  z-richtung_merged_0206.json
Kalmanfilter/MatLab2017a/JsonFilesForMatLab/: importfile.m  x-richtung_kippen_merged_for_Matlab.txt  x-richtung_merged_0206.txt  x-richtung_merged_for_Matlab.txt  y-richtung_kippen_merged_for_Matlab.txt  y-richtung_merged_0206.txt  y-richtung_merged_for_Matlab.txt  z-richtung_merged_0206.txt  z-richtung_merged_for_Matlab.txt
Kalmanfilter/MatLab2017a/PoseEstimationController_ert_rtw/: PoseEstimationController.bat  PoseEstimationController.c  PoseEstimationController.cpp  PoseEstimationController.h  PoseEstimationController.mk  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  ert_main.c  make_exception.mat  modelsources.txt  rtmodel.h  rtw_proj.tmw
Kalmanfilter/MatLab2017a/PoseEstimationController_ert_rtw/html/: PoseEstimationController_c.html  PoseEstimationController_cpp.html  (+17 more)
Kalmanfilter/PoseEstimationController_cpp/: CMakeLists.txt
Kalmanfilter/PoseEstimationController_cpp/include/: Constants.h  ControllerAreaNetwork.h  MSG.h  base85.h  base85.h.gch  rt_atan2d_snf.h
Kalmanfilter/PoseEstimationController_cpp/src/: TwbTracking.h  a.out  base85.c  jevois.c  main.cxx  read_tty.c  rt_atan2d_snf.c  send_tty.c
Kalmanfilter/PoseEstimationController_cpp/src_matlab/: PoseEstimationController.cpp  PoseEstimationController.h  const_params.c  const_params.cpp  dbiemohljmgdohdb_norm.cpp  dbiemohljmgdohdb_norm.h  ert_main.c  iecjgdjeaimokfcj_mrdivide.c  iecjgdjeaimokfcj_mrdivide.h  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_atan2d_snf.cpp  rt_atan2d_snf.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
Kalmanfilter/PoseEstimationController_cpp/src_proto/: TwbTracking.h  createPbFiles.sh  enum.pb.h  loc.pb.cc  loc.pb.h  loc.proto  main.cpp  pose.pb.cc  pose.pb.h  rotation.pb.cc  rotation.pb.h  run.sh  shapes.pb.cc  shapes.pb.h  shapes.proto  vertex.pb.cc  vertex.pb.h  vertex.proto
Kalmanfilter/PoseEstimationController_cpp/src_proto_amiro/: TwbTracking.h  createPbFiles.sh  enum.pb.cc  enum.pb.h  enum.proto  loc.pb.cc  loc.pb.h  main.cpp  pose.pb.cc  pose.pb.h  pose.proto  rotation.pb.cc  rotation.pb.h  rotation.proto  run.sh  shapes.pb.cc  shapes.pb.h  vertex.pb.cc  vertex.pb.h
Kalmanfilter/PoseEstimationController_cpp_build/: PoseEstimationController_cpp
Kalmanfilter/TestTransFnc/: TestSub.slx  TestSub.slx.autosave
Literatur/: A trajectory tracking and 3D positioning controller for the AR.Drone_biblatex  The Navigation and Control technology_biblatex.bib
TWB_Evaluation/: cleanflight_data_log.csv  findcloud.m  findcloud_2.m  findcloud_3.asv  findcloud_3.m  plotDataXYZ.m  surfPerCloud.m
TWB_Evaluation/PoseEstimationController_ert_rtw/: build_exception.mat
TWB_Evaluation/TWB/: Json2mat.m  analyseTWB.m  centralCloud.m  cleanflight_data_log_F3.csv  generateCov.m  importfile1.m
TWB_Evaluation/TWB/box1/: 16-12-14_11-34-28_rsbag_merger.mat  16-12-14_11-34-28_rsbag_merger_manipulate.mat
TWB_Evaluation/TWB/box2/: 16-12-14_13-12-40_rsbag_merger.mat  16-12-14_13-12-40_rsbag_merger_manipulate.mat  16-12-14_13-12-40_rsbag_merger_manipulate_2.mat
TWB_Evaluation/TWB/box3/: 16-12-14_13-34-49_rsbag_merger.mat
TWB_Evaluation/TWB/box4/: 17-01-12_14-21-27_rsbag_merger.mat
TWB_Evaluation/TWB/box5/: 17-01-12_15-18-07_rsbag_merger.mat  17-01-12_15-18-07_rsbag_merger_manipulate.mat  17-01-12_15-18-07_rsbag_merger_manipulate_2.mat
TWB_Evaluation/TWB/floor/: 16-12-14_11-02-51_rsbag_merger.mat  16-12-14_11-02-51_rsbag_merger_manipulate.mat
TWB_Evaluation/oldMatlab/: TestDaten.mat  TestJson.tide.json  calcCOV.asv  calcCOV.m  plotDataXY.m  plotDataXY_11_01.asv  plotDataXY_11_01.m
(+374 files in other folders)
